<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App Name-->
    <string name="app_name">mhealth4afrika</string>
    <!--Font-->
    <string name="font_family">Avenir</string>
    <!--Dashboard-->
    <string name="health_facilities">Health Facilities</string>
    <string name="anc_visits">ANC Visits</string>
    <string name="patients">Patients</string>
    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_go_back">Go Back</string>
    <!--Credentials-->
    <string name="btn_login">Login</string>
    <string name="btn_setup">Set Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="forgot_password_promt">Kindly enter your username or email to reset your password</string>
    <string name="or">Or</string>
    <!-- Language Settings -->
    <string name="language_settings">Choose language</string>
    <string name="english">English</string>
    <string name="swahili">Swahili</string>
    <string name="language">Language</string>
    <string name="please_choose_language">Please choose a language</string>
    <!-- App notifications -->
    <string name="no_internet_connection"><b>No internet connection.</b> Please connect to a working internet connection</string>
    <string name="no_internet_sync_later"><b>No internet connection.</b> Try syncing after connecting to a working internet connection</string>
    <string name="processing"><b>Processing&#8230; Please wait&#8230;</b></string>
    <string name="enter_value_greater">Please enter a value greater than 0</string>
    <string name="field_is_required">This field is required</string>
    <string name="fill_all_required">Please fill in all required fields before submitting</string>
    <string name="invalid_credentials">Login failed. The username or password entered is incorrect</string>
    <string name="error_processing_request">Sorry, there was an error processing your request</string>
    <string name="data_dic_synced">Data dictionary synced successfully</string>
    <string name="data_dic_not_synced">Sorry, there was an error saving the data dictionary on the device</string>
    <string name="setting_up_app">Please wait while app is being set up</string>
    <string name="syncing_started">Syncing started&#8230;</string>
    <string name="sync_complete">Syncing complete</string>
    <string name="syncing_incomplete">Sync was interrupted. Try again later</string>
    <string name="wild_sync">mHealthApp SYNC</string>
    <string name="sync_data_first">Please sync data saved on the device first then try again</string>
    <string name="google_play_services_unavailable">Your device doesn\'t seem to have Google Play Services which is required by the application</string>
    <string name="data_sent">Sent successfully</string>
    <string name="no_connectivity_data_saved_on_device">No connectivity. Data has been saved on the device</string>
    <string name="problem_sending_data_saved_on_device">There was a problem sending the data. Data has been saved on the device</string>
    <string name="problem_saving_data_on_device">There was a problem saving data on the device</string>
    <string name="successful_post">Data sent successfully</string>
    <string name="successful_post_password">Password reset successfully posted. Check your email to reset password</string>
    <string name="sms_failed">SMS sending failed but response team has been alerted</string>
    <string name="sms_sent">SMS alert sent to response team</string>
    <string name="select_language">Please select preferred language</string>
    <string name="select_time">Please select time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_one">Please select one</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_to_logout">Are you sure?</string>
    <string name="sure_to_go_back">Are you sure?</string>

    <!--User-->
    <string name="profile">Profile</string>
    <string name="set_up">Set Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>


    <!--Stepper activity-->
    <string name="ms_prev">PREV</string>
    <string name="ms_next">NEXT</string>
    <string name="ms_end">COMPLETE</string>
    <string name="ms_continue">CONTINUE</string>
    <string name="ms_optional">Optional</string>
    <string name="ms_text_step">Step $current of $total</string>




</resources>
